Fixed the color of the icon in dark mode.
A class was created that changes color in dark mode.
Did this on two icons and the text showing the date

--- a/Shared/css/blackTheme.css
+++ b/Shared/css/blackTheme.css
@@ -584,8 +584,17 @@ body {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.5), 0 2px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
+.iconColorInDarkMode{
+    cursor: pointer;
+    filter: invert(80%);
+    -webkit-filter: invert(80%);
+}
 
-
+.DateColorInDarkMode{
+    cursor: pointer;
+    filter: invert(80%);
+    -webkit-filter: invert(100%);
+}
 /* } */
 /* BOXMENU STYLING STOP */
 /* } */
